--- a/templates/game.html
+++ b/templates/game.html
@@ -8,7 +8,8 @@
     <!-- <img src='../static/images/PikPng.com_juggalo-logo-png_4050105.png'> -->
 
     <!-- script -->
-    <script src="../static/scripts/game.js"></script>    
+    <!-- <script src="../static/scripts/game.js"></script>     -->
+    <script src="game.js"></script>    
 </body>
 
 </html>
